# tigertanda-vdj

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: build-mac.yml  build-windows.yml
.superpowers/brainstorm/38998-1775768029/content/: combined-tab-layout.html  two-column-layout.html  two-column-v2.html  two-column-v3.html  two-column-v4.html
.superpowers/brainstorm/38998-1775768029/state/: server-stopped
Source/: CoverArt.cpp  CoverArt.h  CoverArt_Mac.mm  Info.plist  TangoMatcher.cpp  TangoMatcher.h  TigerTanda.cpp  TigerTanda.def  TigerTanda.h  TigerTanda.rc  TigerTandaHelpers.cpp  TigerTandaHelpers.h  TigerTandaHelpers_Mac.mm  TigerTandaMatching.cpp  TigerTandaUI.cpp  TigerTandaUI_Mac.mm
docs/superpowers/plans/: 2026-04-09-two-column-layout.md
docs/superpowers/specs/: 2026-04-09-two-column-layout-design.md  2026-04-15-macos-port-design.md  2026-04-15-macos-port-plan.md
installer/: TigerTanda.iss
